<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_correo_remitente"
        android:autofillHints=""
        android:hint="@string/hint_correo_remitente"
        android:inputType="textEmailAddress"
        android:text="@string/correo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/txt_contrasena_remitente"
        android:autofillHints=""
        android:hint="@string/hint_contrasena_remitente"
        android:inputType="textPassword"
        android:text="@string/contrasena"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/txt_correo_destino"
        android:autofillHints=""
        android:hint="@string/hint_correo_destino"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/txt_asunto"
        android:autofillHints=""
        android:hint="@string/hint_asunto"
        android:inputType="textAutoCorrect"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/txt_mensaje"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/hint_mensaje"
        android:inputType="text"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_enviar" />

</LinearLayout>